let new note visible

--- a/src/views/all-notes.ejs
+++ b/src/views/all-notes.ejs
@@ -20,6 +20,7 @@
         <h1>All Notes</h1>
         <!-- <pre><%= user %></pre> -->
         <!-- <pre><%= notes %></pre> -->
+        <a href="/notes/add" class="btn btn-info">New item</a> 
     <% } %>
 
     <% if (user.name != 'Guest') { %>
