--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -32,16 +32,19 @@
         />
 
         <!-- {{!-- CUSTOM CSS --}} -->
-        <link href="./../../public/css/main.css">
+        <!-- <link href="/css/main.css"> -->
 
         <!-- {{!-- MOMENTJS --}} -->
         <!-- {{!-- <script type="text/JavaScript" src="MomentJS.js"></script> --}} -->
+
+        <!-- Tailwind -->
+        <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     </head>
 
     <body>
         <!-- {{>navigation}} -->     
         
-        <main class="container p-2">
+        <main class="container p-2_">
             <!-- {{>errors}}            
             {{>messages}} -->
         </main>
