Winter version, About text, and cards separation

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -11,8 +11,17 @@
         <div class="card-body bg-info">
             <h3 class="mx-auto">About Oogway</h3>
     
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum beatae illo architecto. Voluptatibus, vero. 
-                Consequuntur provident ipsam sed suscipit iure et ea. Minus, soluta amet. Odio ut error deserunt inventore!
+            <p>
+                At oogway, We believe in massive customization over mass production.
+            </p>
+            <p>
+                Creating products on demand, allows us to make a better use of the resources and raw materials, while making products as unique as our customers and their needs.
+            </p>
+            <p>
+                Having the possibility to change colors and accesories on the garments for your staff or your customers, promotes a sense of belonging and brand recognition.
+            </p>
+            <p>
+                We are much more than just apparel decor, we make the apparel.
             </p>
         </div>
     
