--- a/src/views/partials/navigation_Guest.ejs
+++ b/src/views/partials/navigation_Guest.ejs
@@ -3,7 +3,8 @@
 
     <div class="container-fluid">
 
-      <a href="/clients"><img src="https://res.cloudinary.com/metacortexjohn/image/upload/v1659980382/Logo_Oogway_r7m6dv.png" alt="" height="40"></a> 
+      <!-- <a href="/clients"><img src="https://res.cloudinary.com/metacortexjohn/image/upload/v1659980382/Logo_Oogway_r7m6dv.png" alt="" height="40"></a>  -->
+      <a><img src="https://res.cloudinary.com/metacortexjohn/image/upload/v1659980382/Logo_Oogway_r7m6dv.png" alt="" height="40"></a> 
 
       <a class="mx-3">Guest</a>
 
