--- a/src/views/all-notes.ejs
+++ b/src/views/all-notes.ejs
@@ -45,7 +45,7 @@
 
                 <div class="col-md-3">
 
-                    <div class="card bg-info carta" id="<%= note._id %>">
+                    <div class="card bg-info carta my-2" id="<%= note._id %>">
     
                         <div class="card-body">
                             <h4 class="card-title d-flex justify-content-between align-items-center">
@@ -106,6 +106,7 @@
                         <% } %>
     
                     </div>
+
                 </div>
             <% } %>
             
